# evtx-to-csv

./: .gitignore  Application3.evtx  CHANGELOG.md  README.md  TODO.md  index.html  instructions.md  package-lock.json  package.json  signatures.json  splashscreen.html  svelte.config.js  tsconfig.json  vite.config.ts
src/: App.svelte  app.css  main.ts
src-tauri/: Cargo.toml  build.rs  signatures.json  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: csv_exporter.rs  enrichment.rs  evtx_parser.rs  filters.rs  main.rs  types.rs
src/lib/: tauri-api.ts  types.ts
src/lib/components/: FileCard.svelte  FilterPanel.svelte
